--- a/form/index.html
+++ b/form/index.html
@@ -17,11 +17,11 @@
             <form method="POST" action="cadastro.php" class="b7validator">
                 <label>
                     Seu nome: <br/>
-                    <input type="text" name="name" data-rules="required"/>
+                    <input type="text" name="name" data-rules="required|min=2"/>
                 </label>
                 <label>
                     Seu e-mail: <br/>
-                    <input type="text" name="email" data-rules="required"/>
+                    <input type="text" name="email" data-rules="required|email"/>
                 </label>
                 <label>
                     Sua senha: <br/>
