--- a/form/index.html
+++ b/form/index.html
@@ -21,11 +21,11 @@
                 </label>
                 <label>
                     Seu e-mail: <br/>
-                    <input type="text" name="email" data-rules="required|email"/>
+                    <input type="text" name="email" data-rules="email"/>
                 </label>
                 <label>
                     Sua senha: <br/>
-                    <input type="password" name="password"/>
+                    <input type="password" name="password" data-rules="required|min=6"/>
                 </label>
                 <label>
                     <input type="submit" value="Cadastrar"/>
